@@ -39,25 +39,25 @@ $total			= 0;
 			<td><?php echo format_currency($compte->getTotal()); $total += $compte->getTotal() ?></td>
 		</tr>
 	<?php endforeach; ?>
+    
+        <tr style="background-color: #eee;">
+            <td colspan="4">&nbsp;</td>
+        </tr>
+        <tr <?php
+            if ($total < 0) {
+                echo 'class="compteNegatif"';
+            }
+            else {
+                echo 'class="comptePositif"';
+            }
+        ?>>
+            <td><strong>TOTAL</strong></td>
+            <td><?php echo format_currency($totalDepenses, '&euro;') ?></td>
+            <td><?php echo format_currency($totalRecettes, '&euro;') ?></td>
+            <td><?php echo format_currency($total, '&euro;') ?></td>
+        </tr>
+    
 	</tbody>
-	<tfoot>
-		<tr style="background-color: #eee;">
-			<td colspan="4">&nbsp;</td>
-		</tr>
-		<tr <?php
-			if ($total < 0) {
-				echo 'class="compteNegatif"';
-			}
-			else {
-				echo 'class="comptePositif"';
-			}
-		?>>
-			<td><strong>TOTAL</strong></td>
-			<td><?php echo format_currency($totalDepenses, '&euro;') ?></td>
-			<td><?php echo format_currency($totalRecettes, '&euro;') ?></td>
-			<td><?php echo format_currency($total, '&euro;') ?></td>
-		</tr>
-	</tfoot>
 </table>
 
 
